# network-mcp-docker-suite

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  USECASE.md  deploy.sh  docker-compose.override.yml.example  docker-compose.yml  mcp_server_config.json  meraki_mcp_server.py  meraki_mcp_server_sse.py  pyproject.toml
catc-mcp-server/: .env.example  Dockerfile  README.md  catc_mcp_server.py  pyproject.toml
ios-xe-mcp-server/: .env.example  Dockerfile  README.md  ios_xe_mcp_server.py  pyproject.toml
ise-mcp-server/: .env.example  Dockerfile  README.md  ise_mcp_server.py  pyproject.toml
meraki-mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  meraki_mcp_server.py
netbox-mcp-server/: .dockerignore  .env.example  README.md  netbox_mcp_server.py
splunk-mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  splunk_mcp_server.py
thousandeyes-mcp-server/: .env.example  Dockerfile  README.md  pyproject.toml  thousandeyes_mcp_server.py
