[project]
name = "thousandeyes-mcp-server"
version = "0.1.0"
description = "Cisco ThousandEyes v7 MCP server for LibreChat integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "requests>=2.31.0",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
]
